# package_with_continuous_delivery

./: .gitattributes  .gitmodules  .travis.yml  LICENSE  MANIFEST.in  README.md  appveyor.yml  configure_versioneer_for_git_branch.sh  setup.cfg  setup.py  upload_to_pypi.sh  versioneer.py
ci_helpers/: configure_pypi.sh  set_timestamp_of_conda_distribution.py
conda.recipe/: build.sh  meta.yaml
continuous_delivery_with_travis_and_pypi/: __init__.py  _version.py
