[versioneer]
VCS = git
style = pep440-pre
versionfile_source = continuous_delivery_with_travis_and_pypi/_version.py
versionfile_build = continuous_delivery_with_travis_and_pypi/_version.py
tag_prefix = v
parentdir_prefix = continuous_delivery_with_travis_and_pypi-


[metadata]
description-file = README.md

